Improve contrast - fixes #6

--- a/app/components/App/App.scss
+++ b/app/components/App/App.scss
@@ -49,6 +49,7 @@ body.block-scroll {
   letter-spacing: 2px;
   text-transform: uppercase;
   text-align: center;
+  font-weight: 300;
 
   @include for-tablet-portrait-up {
     font-size: 40px;
