--- a/app/components/App/_reset.scss
+++ b/app/components/App/_reset.scss
@@ -11,7 +11,6 @@ html {
 body, h1, h2, h3, p {
   margin: 0;
   font-size: 100%;
-  font-weight: 300;
 }
 
 a {
