--- a/app/components/Row/Row.scss
+++ b/app/components/Row/Row.scss
@@ -32,17 +32,16 @@
 }
 
 .row__triangle {
-  color: $GREY_300;
   width: 30px;
   font-size: 12px;
   padding: 0;
   overflow: hidden; // so the outline on hover doesn't go outside the button
   align-self: stretch;
   margin: -6px 0 -6px -4px; // to break out of the content box padding
-  transform: rotateZ(0deg);
+  transform: rotateZ(-90deg);
 
   .row--expanded > .row__content & {
-    transform: rotateZ(90deg);
+    transform: rotateZ(0deg);
   }
 }
 
